@@ -1,4 +1,4 @@
-rev 13-Mar_12-10_32
+rev 13-Mar_12-18_46
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -153,3 +153,4 @@ Fix for XPATH/httRequest in fckxml.js
 
 12 March
 Added user signature item to the context menu.
+Handles multiple footnotes with identical texts.
